src/parser/parser.js
/*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */

"use strict";

function peg$subclass(child, parent) {
  function ctor() { this.constructor = child; }
  ctor.prototype = parent.prototype;
  child.prototype = new ctor();
}

function peg$SyntaxError(message, expected, found, location) {
  this.message  = message;
  this.expected = expected;
  this.found    = found;
  this.location = location;
  this.name     = "SyntaxError";

  if (typeof Error.captureStackTrace === "function") {
    Error.captureStackTrace(this, peg$SyntaxError);
  }
}

peg$subclass(peg$SyntaxError, Error);

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
        literal: function(expectation) {
          return "\"" + literalEscape(expectation.text) + "\"";
        },

        "class": function(expectation) {
          var escapedParts = "",
              i;

          for (i = 0; i < expectation.parts.length; i++) {
            escapedParts += expectation.parts[i] instanceof Array
              ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
              : classEscape(expectation.parts[i]);
          }

          return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
        },

        any: function(expectation) {
          return "any character";
        },

        end: function(expectation) {
          return "end of input";
        },

        other: function(expectation) {
          return expectation.description;
        }
      };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/"/g,  '\\"')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/\]/g, '\\]')
      .replace(/\^/g, '\\^')
      .replace(/-/g,  '\\-')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = new Array(expected.length),
        i, j;

    for (i = 0; i < expected.length; i++) {
      descriptions[i] = describeExpectation(expected[i]);
    }

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== void 0 ? options : {};

  var peg$FAILED = {},

      peg$startRuleFunctions = { Program: peg$parseProgram },
      peg$startRuleFunction  = peg$parseProgram,

      peg$c0 = function(block) { return block },
      peg$c1 = function(top, body) {
          return newBlock(top, body, location())
        },
      peg$c2 = ";",
      peg$c3 = peg$literalExpectation(";", false),
      peg$c4 = function(head, tail) {
          return newNodeList(head, tail);
        },
      peg$c5 = peg$otherExpectation("whitespace"),
      peg$c6 = /^[ \t\n\r]/,
      peg$c7 = peg$classExpectation([" ", "\t", "\n", "\r"], false, false),
      peg$c8 = peg$otherExpectation("nonbreaking_space"),
      peg$c9 = /^[ \t]/,
      peg$c10 = peg$classExpectation([" ", "\t"], false, false),
      peg$c11 = peg$otherExpectation("breaking_space"),
      peg$c12 = /^[\n\r]/,
      peg$c13 = peg$classExpectation(["\n", "\r"], false, false),
      peg$c14 = peg$otherExpectation("nonbreaking_char"),
      peg$c15 = /^[^\n\r]/,
      peg$c16 = peg$classExpectation(["\n", "\r"], true, false),
      peg$c17 = peg$anyExpectation(),
      peg$c18 = "=",
      peg$c19 = peg$literalExpectation("=", false),
      peg$c20 = "+",
      peg$c21 = peg$literalExpectation("+", false),
      peg$c22 = "-",
      peg$c23 = peg$literalExpectation("-", false),
      peg$c24 = "/",
      peg$c25 = peg$literalExpectation("/", false),
      peg$c26 = "//",
      peg$c27 = peg$literalExpectation("//", false),
      peg$c28 = "*",
      peg$c29 = peg$literalExpectation("*", false),
      peg$c30 = "**",
      peg$c31 = peg$literalExpectation("**", false),
      peg$c32 = "%",
      peg$c33 = peg$literalExpectation("%", false),
      peg$c34 = "|",
      peg$c35 = peg$literalExpectation("|", false),
      peg$c36 = "||",
      peg$c37 = peg$literalExpectation("||", false),
      peg$c38 = "&",
      peg$c39 = peg$literalExpectation("&", false),
      peg$c40 = "&&",
      peg$c41 = peg$literalExpectation("&&", false),
      peg$c42 = "^",
      peg$c43 = peg$literalExpectation("^", false),
      peg$c44 = "==",
      peg$c45 = peg$literalExpectation("==", false),
      peg$c46 = "!=",
      peg$c47 = peg$literalExpectation("!=", false),
      peg$c48 = ">",
      peg$c49 = peg$literalExpectation(">", false),
      peg$c50 = "<",
      peg$c51 = peg$literalExpectation("<", false),
      peg$c52 = ">=",
      peg$c53 = peg$literalExpectation(">=", false),
      peg$c54 = "<=",
      peg$c55 = peg$literalExpectation("<=", false),
      peg$c56 = ".",
      peg$c57 = peg$literalExpectation(".", false),
      peg$c58 = "..",
      peg$c59 = peg$literalExpectation("..", false),
      peg$c60 = "...",
      peg$c61 = peg$literalExpectation("...", false),
      peg$c62 = "!",
      peg$c63 = peg$literalExpectation("!", false),
      peg$c64 = "<-",
      peg$c65 = peg$literalExpectation("<-", false),
      peg$c66 = "_",
      peg$c67 = peg$literalExpectation("_", false),
      peg$c68 = "/*",
      peg$c69 = peg$literalExpectation("/*", false),
      peg$c70 = "*/",
      peg$c71 = peg$literalExpectation("*/", false),
      peg$c72 = /^["\\ntrbf]/,
      peg$c73 = peg$classExpectation(["\"", "\\", "n", "t", "r", "b", "f"], false, false),
      peg$c74 = /^[a-z]/i,
      peg$c75 = peg$classExpectation([["a", "z"]], false, true),
      peg$c76 = /^[0-9]/,
      peg$c77 = peg$classExpectation([["0", "9"]], false, false),
      peg$c78 = /^[1-9]/,
      peg$c79 = peg$classExpectation([["1", "9"]], false, false),
      peg$c80 = /^[0-9a-f]/i,
      peg$c81 = peg$classExpectation([["0", "9"], ["a", "f"]], false, true),
      peg$c82 = /^[01]/,
      peg$c83 = peg$classExpectation(["0", "1"], false, false),
      peg$c84 = "true",
      peg$c85 = peg$literalExpectation("true", false),
      peg$c86 = "false",
      peg$c87 = peg$literalExpectation("false", false),
      peg$c88 = "null",
      peg$c89 = peg$literalExpectation("null", false),
      peg$c90 = function() { return newKeyword(text()) },
      peg$c91 = function(op) { return parseOp(op); },
      peg$c92 = "0",
      peg$c93 = peg$literalExpectation("0", false),
      peg$c94 = function(number) {
          return parseNumber(text(), location());
        },
      peg$c95 = function() {
          return newIdent(text(), location());
        },
      peg$c96 = "\"",
      peg$c97 = peg$literalExpectation("\"", false),
      peg$c98 = /^[\0-\x1F"\\]/,
      peg$c99 = peg$classExpectation([["\0", "\x1F"], "\"", "\\"], false, false),
      peg$c100 = "\\",
      peg$c101 = peg$literalExpectation("\\", false),
      peg$c102 = function() {
          return newString(text(), location());
        },
      peg$c103 = "(",
      peg$c104 = peg$literalExpectation("(", false),
      peg$c105 = ")",
      peg$c106 = peg$literalExpectation(")", false),
      peg$c107 = function(body) {
          return body;
        },
      peg$c108 = ",",
      peg$c109 = peg$literalExpectation(",", false),
      peg$c110 = function(head, tail) {
          return newIdentList(head, tail, location());
        },
      peg$c111 = function(head, tail) {
          return newNodeList(head, tail, location());
        },
      peg$c112 = ":",
      peg$c113 = peg$literalExpectation(":", false),
      peg$c114 = function(key, val) {
          return newKeyValuePair(key, val, location());
        },
      peg$c115 = function(head, tail) {
          return newKeyValuePairList(head, tail, location());
        },
      peg$c116 = "=>",
      peg$c117 = peg$literalExpectation("=>", false),
      peg$c118 = function(params, body) {
          return newFuncLiteral(params, body, location());
        },
      peg$c119 = "[",
      peg$c120 = peg$literalExpectation("[", false),
      peg$c121 = "]",
      peg$c122 = peg$literalExpectation("]", false),
      peg$c123 = function(list) {
          return newArrayLiteral(list, location());
        },
      peg$c124 = "<#",
      peg$c125 = peg$literalExpectation("<#", false),
      peg$c126 = "#>",
      peg$c127 = peg$literalExpectation("#>", false),
      peg$c128 = function(list) {
          return newSetLiteral(list, location());
        },
      peg$c129 = "{",
      peg$c130 = peg$literalExpectation("{", false),
      peg$c131 = "}",
      peg$c132 = peg$literalExpectation("}", false),
      peg$c133 = function(pairs) {
          return newMapLiteral(pairs, location());
        },
      peg$c134 = function(ret, expr) {
          return ret === null ? expr : newReturn(expr, location());
        },
      peg$c135 = function(op, node) {
          return newUnary(op, node)
        },
      peg$c136 = function(target, addendums) {
          return newPostfix(target, addendums, location());
        },
      peg$c137 = function(head, tail) {
          return newInfix(head, tail, location());
        },
      peg$c138 = function(addendum) {
          return newMember(addendum, location());
        },
      peg$c139 = function(list) {
          return newCall(list, location());
        },
      peg$c140 = function(expr) {
          return newIndex(expr, location());
        },
      peg$c141 = function(condition, consequence) {
          return newCase(condition, consequence, location());
        },
      peg$c142 = function(head, tail) {
          return newCaseBlock(head, tail, location());
        },
      peg$c143 = "if",
      peg$c144 = peg$literalExpectation("if", false),
      peg$c145 = function(cases) {
          return newIf(cases, location());
        },
      peg$c146 = "switch",
      peg$c147 = peg$literalExpectation("switch", false),
      peg$c148 = function(test, cases) {
          return newSwitch(test, cases, location());
        },

      peg$currPos          = 0,
      peg$savedPos         = 0,
      peg$posDetailsCache  = [{ line: 1, column: 1 }],
      peg$maxFailPos       = 0,
      peg$maxFailExpected  = [],
      peg$silentFails      = 0,

      peg$result;

  if ("startRule" in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos], p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line:   details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;
      return details;
    }
  }

  function peg$computeLocation(startPos, endPos) {
    var startPosDetails = peg$computePosDetails(startPos),
        endPosDetails   = peg$computePosDetails(endPos);

    return {
      start: {
        offset: startPos,
        line:   startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line:   endPosDetails.line,
        column: endPosDetails.column
      }
    };
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parseProgram() {
    var s0, s1, s2, s3, s4;

    s0 = peg$currPos;
    s1 = peg$parse_();
    if (s1 !== peg$FAILED) {
      s2 = peg$parseBlockBody();
      if (s2 !== peg$FAILED) {
        s3 = peg$parse_();
        if (s3 !== peg$FAILED) {
          s4 = peg$parseEOF();
          if (s4 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c0(s2);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseBlockBody() {
    var s0, s1, s2, s3, s4, s5, s6, s7;

    s0 = peg$currPos;
    s1 = peg$parseBlockLine();
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$currPos;
      s4 = [];
      s5 = peg$currPos;
      s6 = peg$parse__();
      if (s6 !== peg$FAILED) {
        s7 = peg$parse_bs_();
        if (s7 !== peg$FAILED) {
          s6 = [s6, s7];
          s5 = s6;
        } else {
          peg$currPos = s5;
          s5 = peg$FAILED;
        }
      } else {
        peg$currPos = s5;
        s5 = peg$FAILED;
      }
      while (s5 !== peg$FAILED) {
        s4.push(s5);
        s5 = peg$currPos;
        s6 = peg$parse__();
        if (s6 !== peg$FAILED) {
          s7 = peg$parse_bs_();
          if (s7 !== peg$FAILED) {
            s6 = [s6, s7];
            s5 = s6;
          } else {
            peg$currPos = s5;
            s5 = peg$FAILED;
          }
        } else {
          peg$currPos = s5;
          s5 = peg$FAILED;
        }
      }
      if (s4 !== peg$FAILED) {
        s5 = peg$parse__();
        if (s5 !== peg$FAILED) {
          s6 = peg$parseBlockLine();
          if (s6 !== peg$FAILED) {
            s4 = [s4, s5, s6];
            s3 = s4;
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      } else {
        peg$currPos = s3;
        s3 = peg$FAILED;
      }
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$currPos;
        s4 = [];
        s5 = peg$currPos;
        s6 = peg$parse__();
        if (s6 !== peg$FAILED) {
          s7 = peg$parse_bs_();
          if (s7 !== peg$FAILED) {
            s6 = [s6, s7];
            s5 = s6;
          } else {
            peg$currPos = s5;
            s5 = peg$FAILED;
          }
        } else {
          peg$currPos = s5;
          s5 = peg$FAILED;
        }
        while (s5 !== peg$FAILED) {
          s4.push(s5);
          s5 = peg$currPos;
          s6 = peg$parse__();
          if (s6 !== peg$FAILED) {
            s7 = peg$parse_bs_();
            if (s7 !== peg$FAILED) {
              s6 = [s6, s7];
              s5 = s6;
            } else {
              peg$currPos = s5;
              s5 = peg$FAILED;
            }
          } else {
            peg$currPos = s5;
            s5 = peg$FAILED;
          }
        }
        if (s4 !== peg$FAILED) {
          s5 = peg$parse__();
          if (s5 !== peg$FAILED) {
            s6 = peg$parseBlockLine();
            if (s6 !== peg$FAILED) {
              s4 = [s4, s5, s6];
              s3 = s4;
            } else {
              peg$currPos = s3;
              s3 = peg$FAILED;
            }
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      }
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c1(s1, s2);
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseBlockLine() {
    var s0, s1, s2, s3, s4, s5, s6, s7;

    s0 = peg$currPos;
    s1 = peg$parseReturn();
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$currPos;
      s4 = peg$parse__();
      if (s4 !== peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 59) {
          s5 = peg$c2;
          peg$currPos++;
        } else {
          s5 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c3); }
        }
        if (s5 !== peg$FAILED) {
          s6 = peg$parse__();
          if (s6 !== peg$FAILED) {
            s7 = peg$parseReturn();
            if (s7 !== peg$FAILED) {
              s4 = [s4, s5, s6, s7];
              s3 = s4;
            } else {
              peg$currPos = s3;
              s3 = peg$FAILED;
            }
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      } else {
        peg$currPos = s3;
        s3 = peg$FAILED;
      }
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$currPos;
        s4 = peg$parse__();
        if (s4 !== peg$FAILED) {
          if (input.charCodeAt(peg$currPos) === 59) {
            s5 = peg$c2;
            peg$currPos++;
          } else {
            s5 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c3); }
          }
          if (s5 !== peg$FAILED) {
            s6 = peg$parse__();
            if (s6 !== peg$FAILED) {
              s7 = peg$parseReturn();
              if (s7 !== peg$FAILED) {
                s4 = [s4, s5, s6, s7];
                s3 = s4;
              } else {
                peg$currPos = s3;
                s3 = peg$FAILED;
              }
            } else {
              peg$currPos = s3;
              s3 = peg$FAILED;
            }
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      }
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c4(s1, s2);
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parse_() {
    var s0, s1;

    peg$silentFails++;
    s0 = [];
    if (peg$c6.test(input.charAt(peg$currPos))) {
      s1 = input.charAt(peg$currPos);
      peg$currPos++;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c7); }
    }
    if (s1 === peg$FAILED) {
      s1 = peg$parseCOMMENT();
    }
    while (s1 !== peg$FAILED) {
      s0.push(s1);
      if (peg$c6.test(input.charAt(peg$currPos))) {
        s1 = input.charAt(peg$currPos);
        peg$currPos++;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c7); }
      }
      if (s1 === peg$FAILED) {
        s1 = peg$parseCOMMENT();
      }
    }
    peg$silentFails--;
    if (s0 === peg$FAILED) {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c5); }
    }

    return s0;
  }

  function peg$parse__() {
    var s0, s1;

    peg$silentFails++;
    s0 = [];
    if (peg$c9.test(input.charAt(peg$currPos))) {
      s1 = input.charAt(peg$currPos);
      peg$currPos++;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c10); }
    }
    while (s1 !== peg$FAILED) {
      s0.push(s1);
      if (peg$c9.test(input.charAt(peg$currPos))) {
        s1 = input.charAt(peg$currPos);
        peg$currPos++;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c10); }
      }
    }
    peg$silentFails--;
    if (s0 === peg$FAILED) {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c8); }
    }

    return s0;
  }

  function peg$parse_bs_() {
    var s0, s1;

    peg$silentFails++;
    if (peg$c12.test(input.charAt(peg$currPos))) {
      s0 = input.charAt(peg$currPos);
      peg$currPos++;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c13); }
    }
    if (s0 === peg$FAILED) {
      s0 = peg$parseCOMMENT();
    }
    peg$silentFails--;
    if (s0 === peg$FAILED) {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c11); }
    }

    return s0;
  }

  function peg$parse_nb_() {
    var s0, s1;

    peg$silentFails++;
    s0 = [];
    if (peg$c15.test(input.charAt(peg$currPos))) {
      s1 = input.charAt(peg$currPos);
      peg$currPos++;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c16); }
    }
    while (s1 !== peg$FAILED) {
      s0.push(s1);
      if (peg$c15.test(input.charAt(peg$currPos))) {
        s1 = input.charAt(peg$currPos);
        peg$currPos++;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c16); }
      }
    }
    peg$silentFails--;
    if (s0 === peg$FAILED) {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c14); }
    }

    return s0;
  }

  function peg$parseEOF() {
    var s0, s1;

    s0 = peg$currPos;
    peg$silentFails++;
    if (input.length > peg$currPos) {
      s1 = input.charAt(peg$currPos);
      peg$currPos++;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c17); }
    }
    peg$silentFails--;
    if (s1 === peg$FAILED) {
      s0 = void 0;
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseASSIGN() {
    var s0;
